--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,51 @@ section {
 #gallery .row > * {
     padding: 0;
 }
+
+/* my keyboard section */
+.keyboard-box {
+    position: relative;
+    background-color: #0d6efd;
+    border-radius: 10px;
+    height: 500px;
+    overflow: hidden;
+}
+
+.keyboard-box::before {
+    content: 'MY';
+    position: absolute;
+    color: #fff;
+    font-size: 6em;
+    font-weight: bold;
+    font-style: italic;
+    top: 30px;
+    left: -100px;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.keyboard-box:hover::before {
+    left: 50%;
+    transform: translate(-50%, 0);
+    opacity: 0.2;
+}
+
+.keyboard-box::after {
+    content: 'KEYBOARD';
+    position: absolute;
+    color: #fff;
+    font-size: 4.2em;
+    font-weight: bold;
+    font-style: italic;
+    top: 350px;
+    left: 650px;
+    transform: translate(-50%, 0);
+    opacity: 1;
+    transition: 0.5s;
+}
+
+.keyboard-box:hover::after {
+    left: 50%;
+    transform: translate(-50%, 0);
+    opacity: 0.2;
+}
