menambahkan library tilt js

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ section {
     background-color: #0d6efd;
     border-radius: 10px;
     height: 500px;
-    overflow: hidden;
+    transform-style: preserve-3d;
 }
 
 .keyboard-box::before {
@@ -40,14 +40,13 @@ section {
     font-weight: bold;
     font-style: italic;
     top: 30px;
-    left: -100px;
+    left: 50%;
+    transform: translate(-50%, 0);
     opacity: 0;
     transition: 0.5s;
 }
 
 .keyboard-box:hover::before {
-    left: 50%;
-    transform: translate(-50%, 0);
     opacity: 0.2;
 }
 
@@ -59,14 +58,57 @@ section {
     font-weight: bold;
     font-style: italic;
     top: 350px;
-    left: 650px;
+    left: 50%;
     transform: translate(-50%, 0);
-    opacity: 1;
+    opacity: 0;
     transition: 0.5s;
 }
 
 .keyboard-box:hover::after {
-    left: 50%;
-    transform: translate(-50%, 0);
     opacity: 0.2;
+}
+
+.keyboard-name {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    color: #fff;
+    text-align: center;
+    font-size: 2em;
+    opacity: 0;
+    transform: translate3d(0,0, 50px);
+    transition: 0.5s;
+}
+
+.keyboard-box:hover .keyboard-name {
+    top: 20px;
+    opacity: 1;
+}
+
+.keyboard-detail-button {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate3d(-50%, 0, 100px);
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.keyboard-box:hover .keyboard-detail-button {
+    opacity: 1;
+    bottom: 20px;
+}
+
+.keyboard-img {
+    position: absolute;
+    top: 52%;
+    left: 50%;
+    transform: translate3d(-50%, -52%, 80px);
+    max-width: 350px;
+    transition: 0.5s;
+    z-index: 3;
+}
+
+.keyboard-box:hover .keyboard-img {
+    transform: translate3d(-50%, -52%, 100px) rotate(5deg) scale(1.2);
 }
